oid, auth and metadata testing

--- a/Foss.FossDoc.Protos/Foss.FossDoc.Protos.csproj
+++ b/Foss.FossDoc.Protos/Foss.FossDoc.Protos.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Protobuf Include="..\Protos\auth.proto" Link="auth.proto" />
     <Protobuf Include="..\Protos\greet.proto" Link="greet.proto" />
+    <Protobuf Include="..\Protos\oid.proto" Link="oid.proto" />
   </ItemGroup>
 
   <ItemGroup>
