--- a/Foss.FossDoc.GRPC46.Service/Foss.FossDoc.GRPC46.Service.csproj
+++ b/Foss.FossDoc.GRPC46.Service/Foss.FossDoc.GRPC46.Service.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Services\GreeterService.cs" />
   </ItemGroup>
   <ItemGroup>
