Рабочий вариант, но не удалось вывести в общую сборку .proto файлы - .NET Standard не виден для обычного Framework-приложения. Пришлось залинковать пока .proto-файлы напрямую, чтобы они сгенерировали нужные обертки

--- a/Foss.FossDoc.Protos/Foss.FossDoc.Protos.csproj
+++ b/Foss.FossDoc.Protos/Foss.FossDoc.Protos.csproj
@@ -5,12 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\Protos\auth.proto" Link="auth.proto" />
-    <Protobuf Include="..\Protos\eventshub.proto">
-      <Link>eventshub.proto</Link>
-    </Protobuf>
-    <Protobuf Include="..\Protos\greet.proto" Link="greet.proto" />
-    <Protobuf Include="..\Protos\oid.proto" Link="oid.proto" />
+    <Protobuf Include="..\Protos\auth.proto" Link="auth.proto" GrpcServices="Both" />
+    <Protobuf Include="..\Protos\eventshub.proto" Link="eventshub.proto" GrpcServices="Both" />
+    <Protobuf Include="..\Protos\greet.proto" Link="greet.proto" GrpcServices="Both" />
+    <Protobuf Include="..\Protos\oid.proto" Link="oid.proto" GrpcServices="Both" />
   </ItemGroup>
 
   <ItemGroup>
