--- a/Foss.FossDoc.GRPC46.Service/Foss.FossDoc.GRPC46.Service.csproj
+++ b/Foss.FossDoc.GRPC46.Service/Foss.FossDoc.GRPC46.Service.csproj
@@ -75,14 +75,11 @@
     <Compile Include="Services\GreeterService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Protobuf Include="..\Protos\auth.proto">
+      <Link>Protos\auth.proto</Link>
+    </Protobuf>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Foss.FossDoc.Protos\Foss.FossDoc.Protos.csproj">
-      <Project>{d27d4df4-a0d1-4924-a44e-f7a939ffbb37}</Project>
-      <Name>Foss.FossDoc.Protos</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -92,7 +89,9 @@
     <Error Condition="!Exists('..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.props'))" />
     <Error Condition="!Exists('..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.targets'))" />
     <Error Condition="!Exists('..\packages\Grpc.Core.2.33.1\build\net45\Grpc.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Grpc.Core.2.33.1\build\net45\Grpc.Core.targets'))" />
+    <Error Condition="!Exists('..\packages\Google.Protobuf.Tools.3.18.1\build\Google.Protobuf.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Google.Protobuf.Tools.3.18.1\build\Google.Protobuf.Tools.targets'))" />
   </Target>
   <Import Project="..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.targets" Condition="Exists('..\packages\Grpc.Tools.2.33.1\build\Grpc.Tools.targets')" />
   <Import Project="..\packages\Grpc.Core.2.33.1\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.2.33.1\build\net45\Grpc.Core.targets')" />
+  <Import Project="..\packages\Google.Protobuf.Tools.3.18.1\build\Google.Protobuf.Tools.targets" Condition="Exists('..\packages\Google.Protobuf.Tools.3.18.1\build\Google.Protobuf.Tools.targets')" />
 </Project>
