--- a/ClientConsoleApp462/packages.config
+++ b/ClientConsoleApp462/packages.config
@@ -3,9 +3,47 @@
   <package id="Google.Protobuf" version="3.21.12" targetFramework="net462" />
   <package id="Grpc.Core" version="2.46.5" targetFramework="net462" />
   <package id="Grpc.Core.Api" version="2.51.0" targetFramework="net462" />
+  <package id="Grpc.Net.Client" version="2.51.0" targetFramework="net462" />
+  <package id="Grpc.Net.ClientFactory" version="2.51.0" targetFramework="net462" />
+  <package id="Grpc.Net.Common" version="2.51.0" targetFramework="net462" />
   <package id="Grpc.Tools" version="2.51.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.CommandLine" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.UserSecrets" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Hosting" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Http" version="3.0.3" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Console" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Debug" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.EventLog" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.EventSource" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="7.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="7.0.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
